Java 11 doesn’t support AggressiveOpts any longer
Signed-off-by: Michael Eichberg <mail@michael-eichberg.de>

Former-commit-id: 2983ac0d195f528a0f3c738e5338d11087adcb8b